# denoiser

./: .gitattributes  CMakeLists.txt
libs/oidn/include/OpenImageDenoise/: config.h
libs/oidn/lib/: OpenImageDenoise.lib  OpenImageDenoise_core.lib  OpenImageDenoise_device_cpu.lib  OpenImageDenoise_device_cuda.exp  OpenImageDenoise_device_cuda.lib  OpenImageDenoise_utils.lib
src/denoiser_library/: denoiser.cpp  denoiser.hpp  lib.cpp
